# x360-challenge-api

./: CMakeLists.txt
src/: main.cpp  stdafx.h
src/core/: challenges.cpp  challenges.h  core.cpp  core.h  xbox.cpp  xbox.h
src/crypto/: rsa.cpp  rsa.h
src/util/: dirs.cpp  dirs.h  util.cpp  util.h
src/util/io/: binary_reader.cpp  binary_reader.h  binary_writer.cpp  binary_writer.h
src/xecrypt/: sha1.cpp  sha1.h
